--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "react-router-dom": "^4.2.2",
     "superagent": "^3.8.2"
   }
 }
